tests/checker/fail/literal_dispatch_missing_catchall.can
Routed = String

String => Routed {
    String -> (
        * "/a" => Routed { "a" }
        * "/b" => Routed { "b" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
